@@ -17,29 +17,48 @@
 ##   along with this program; if not, write to the Free Software
 ##   Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
-import sys
+import os, sys
+import numpy, m8r
+from las import LASReader
 
-class LAS(object):
-    'Well log representation'
-    def parse(file):
-        fp = open(file)
-        fp.close()
-    def write():
-        pass
+def las2rsf(lasf,rsff):
+    las = LASReader(lasf)
+    rsf = m8r.Output(rsff)
+    data = las.data2d
+    shape = data.shape
+    rsf.put('n1',shape[1])
+    rsf.put('n2',shape[0])
+    rsf.put('o2',las.start)
+    rsf.put('d2',las.step)
+    rsf.put('null',las.null)
+    k = 0
+    for name in las.curves.names:
+        k += 1
+        key = 'key%d' % k
+        rsf.put(key,name)
+        item = las.curves.items[name]
+        rsf.put(key+'_units',item.units)
+        rsf.put(name,item.descr)
+    rsf.write(data)
+    rsf.close()
 
 if __name__ == "__main__":
     usage = '''
-Usage: %s file.las > file.rsf
+Usage: %s file.las [file.rsf]
+
+Check the output using sfheaderattr < file.rsf segy=n
     '''
 
     if len(sys.argv) < 2:
-        print usage
-        sys.exit(1)
+       print usage
+       sys.exit(1)
     
-    las = LAS()
-    las.parse(sys.argv[1])
-    las.write()
+    lasfile = sys.argv[1]
 
+    if len(sys.argv) < 3:
+       rsffile=os.path.splitext(lasfile)[0]+'.rsf'
+
+    las2rsf(lasfile,rsffile)
     sys.exit(0)
 
         
